# snwbot

./: .gitignore  LICENSE  README.md  config.toml  justfile  meson.build  snwbot_config.toml
include/: plugin_api.hpp
plugins/: meson.build
plugins/exec_command/: exec_command.cpp
plugins/introduce/: introduce.cpp  meson.build
src/: bot.cpp  bot.hpp  command.cpp  command.hpp  main.cpp  meson.build  msg.cpp  msg.hpp  plugin_api.hpp  plugin_manage.cpp  plugin_manage.hpp  ws_client.cpp  ws_client.hpp
src/include/: bot.hpp  plugin_api.hpp
src/plugins/: introduce.cpp
